# com_terminal

./: .gitignore  CMakeLists.txt  README.md  build.bat
doc/: BufferPool.md  Crc.md  LogVirtualizer.md  PortScanner.md  README.md  SafeHandle.md  SerialPort.md  UI.md
include/: resource.h
resources/: app.aps  app.manifest  app.rc  menu_en.rc  menu_ru.rc  strings_en.rc  strings_ru.rc
src/: main.cpp
src/core/: BufferPool.cpp  BufferPool.h  Crc.cpp  Crc.h  LogVirtualizer.cpp  LogVirtualizer.h  SafeHandle.cpp  SafeHandle.h
src/serial/: PortScanner.cpp  PortScanner.h  SerialPort.cpp  SerialPort.h
src/ui/: MainWindow.cpp  MainWindow.h  WindowActions.cpp  WindowActions.h  WindowBuilder.cpp  WindowBuilder.h  WindowLayout.cpp  WindowLayout.h
